--- a/menu.css
+++ b/menu.css
@@ -1,21 +1,28 @@
 body>header nav {
-    background: aquamarine;
+    /*background: aquamarine;*/
     width: calc( 100vw / 4);
     text-align: right;
-    /*margin-left: -12px;*/
 }
 
+body>header nav .material-icons-two-tone {
+    padding: 12px;
+    margin-right: 12px;
+    cursor: pointer;
+}
 
 body>header nav .material-icons-two-tone:hover+ul,
 body>header nav ul:hover {
+    height: 80px;
     visibility: visible;
 }
 
 body>header nav ul {
     position: absolute;
+    right: 12px;
+    border: 1px solid black;
+    background: white;
+    padding: 12px;
     height: 0;
-    right: 0;
-    text-align: right;
     visibility: hidden;
     overflow: hidden;
 }
